trying to solve stuck directories right after their creation

--- a/js/file-explorer/style.css
+++ b/js/file-explorer/style.css
@@ -1,5 +1,10 @@
 #file-explorer-wrapper{
     max-width:100%;
+    display:flex;
+    justify-content:flex-start;
+    flex-direction:row;
+    flex-wrap: wrap;
+    height: auto;
 }
 
 .file-menu {
